--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Harrison Adair</title>
+	<link rel="icon" type="image/png" href="favicon.png"/>
+	<meta property="og:title" content="Harrison Adair" />
+  	<meta property="og:description" content="Multidisciplinary creative practice working across entertainment, art, and fashion. Formed by Thomas Harrison and James Adair in 2025." />
 
 	<style>
 		body {
