--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			NEMAHSIS<br/>
 			PINKPANTHERESS</p>
 			<p><a href="mailto:Studio@harrisonadair.com">E-MAIL</a><br/>
-			<a href="mailto:Studio@harrisonadair.com">AGENT CONTACT</a><br/>
+			<a href="mailto:Shirley@lovesong.tv">AGENT CONTACT</a><br/>
 			<a href="https://www.instagram.com/harrison__adair/" target="_blank">@HARRISON_ADAIR</a></p>
 			<p>IDENTITY and WEB<br/>
 			BY <a href="https://olivershawoffice.com/" target="_blank">OLIVER SHAW OFFICE</a></p>
