--- a/index.html
+++ b/index.html
@@ -123,11 +123,7 @@
 
 	<div id="info">
 		<div class="info_content">
-			<p>Multidisciplinary creative practice working across entertainment, art, and fashion. Formed by Thomas Harrison and James Adair in 2025.</p>
-			<p>
-			FILM<br/>
-			PHOTO<br/>
-			CREATIVE DIRECTION</p>
+			<p>Harrison Adair is Tommy Harrison & Jamie Adair. Filmmaking, photography and art direction. London.</p>
 			<p>ADIDAS<br/>
 			LIL YACHTY<br/>
 			JAMES BLAKE<br/>
