--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Harrison Adair</title>
 	<link rel="icon" type="image/png" href="favicon.png"/>
 	<meta property="og:title" content="Harrison Adair" />
-  	<meta property="og:description" content="Multidisciplinary creative practice working across entertainment, art, and fashion. Formed by Thomas Harrison and James Adair in 2025." />
+  	<meta property="og:description" content="Harrison Adair is Tommy Harrison & Jamie Adair. Filmmaking, photography and art direction. London." />
 
 	<style>
 		@font-face {
